================
Next Version
================

==================
bst-external 0.6.2
==================

  o Add support for non-annotated tags in git_tag.
  o Make git_tag plugin fall back to normal behaviour if no tags are found.

==================
bst-external 0.6.1
==================

  o Add entrypoint for git_tag plugin

================
bst-external 0.6
================

  o New git-tag plugin: An extension to the BuildStream git plugin
    which allows automatic tracking of the latest tag in a branch.
  o fastboot_bootimg Element - Uses artifacts generated by buildstream to produce an
    image that can be flashed to the boot partition using fastboot.
  o fastboot_ext4 Element - Uses artifacts generated by buildstream to produce an
    ext4sparse image that can be flashed to userdata partitions or others using fastboot.

==================
bst-external 0.5.1
==================

  o collect-integration: Fix the collect-integration plugin not being loadable
    via pip

================
bst-external 0.5
================

  o flatpak-image: Preserve case-sensitivity of flatpak metadata.

================
bst-external 0.4
================

  o Introducing James Ennis as co-maintainer
  o dpkg-build: The debian/rules file no longer has to be made executable
  o Installation no longer erroneously installs the tests
  o README.md includes documentation for how to use and install it
  o The test suite can now be run in versions of buildstream that forbid paths
    leading outside the project.
  o The Collect Integration Element has been imported from the freedesktop-sdk
    project. This plugin collects the integration commands of all its
    dependencies into a single shell script.


==================
bst-external 0.3.1
==================

  o Updated the version in setup.py for the latest version, and updated the
    release process so this is less likely to happen again.

================
bst-external 0.3
================
