@@ -2,6 +2,8 @@
 Next Version
 ================
 
+  0 Add tar_element plugin for creating tarballs
+
 ==================
 bst-external 0.6.2
 ==================
